fixing page bottom overflow scroll

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     max-height: 100%;
     background: linear-gradient(90deg, hsla(350, 96%, 20%, .6), hsla(29, 100%, 50%, 1));
+    overflow: hidden;
 }
 
 /* variables */
